--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sherlock-ai",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write 'src/**/*.ts'"
   },
-  "author": "",
+  "author": "Patrik Gallik",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.4.1",
