--- a/package.json
+++ b/package.json
@@ -14,15 +14,29 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.4.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.1.3",
     "@types/puppeteer": "^7.0.4",
+    "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "openai": "^4.56.0",
+    "punycode": "^2.3.1",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
