--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "sherlock-ai",
+  "name": "browser-agent",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "start": "node dist/index.js",
     "build": "tsc",
     "watch": "tsc --watch",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write 'src/**/*.ts'"
   },
   "author": "Patrik Gallik",
@@ -30,6 +30,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.3",
     "@types/puppeteer": "^7.0.4",
+    "@types/yargs": "^17.0.33",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "openai": "^4.56.0",
@@ -37,6 +38,7 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "yargs": "^17.7.2"
   }
 }
